# xbits

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  nbits.rs  range.rs  xbits.rs
src/core/: arith.rs  bits.rs  bitwise.rs  convert.rs  iter.rs  mod.rs  range.rs
tests/: chunk_test.rs  iter_test.rs  nbits_arith_test.rs  nbits_bitwise_test.rs  nbits_offset_test.rs
