[package]
name = "xbits"
version = "0.1.0"
edition = "2024"

authors = ["Artimonist <artimonist@gmail.com>"]
description = "Bits operations on [u8]"
homepage = "https://artimonist.org/"
repository = "https://github.com/artimonist/xbits/"

license = "MIT"
keywords = ["bitcoin", "wallet", "mnemonic", "crypto", "base64"]
categories = ["cryptography"]
crate-type = ["lib"]

[dependencies]

[dev-dependencies]
hex = "0.4.3"
